# Code-Jam-2022

./: Dockerfile  README.md  dev-requirements.txt  docker-compose.admintesting.yaml  docker-compose.dbtesting.yaml  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.mongo.yml  docker-compose.pretest.yml  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: main.py
frontend/: admin.html
source/: __init__.py
source/backend/: Dockerfile  __init__.py  admin_utils.py  admin_utils_testing.py  client.py  db_testing.py  main.py  requirements.txt  server.py
source/backend/Database/: Dockerfile  __init__.py  database.py  db_testing.py  requirements.txt
source/backend/database/: __init__.py  _database.py  requirements.txt
source/backend/gateway/: __init__.py  _gateway.py  gateway.py  gatewayenum.py
source/frontend/: admin.html  adminpanel.html  chatroom.html  homepage.html  index.html
source/frontend/assets/js/: yjc_admin.js  yjc_chat.js  yjc_index.js
