[tool.poetry]
name = "YellowJacket"
version = "0.1.0"
description = ""
authors = ["Davr", "chrisg", "saraansh", "TheAntiSnipe", "okimii"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
websockets = "^10.3"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
